# tsumikoro

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: automerge.yml  build.yml
firmware/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  clean
firmware/cmake/: arm-none-eabi.cmake  stm32g030.cmake  stm32g071.cmake
firmware/common/: CMakeLists.txt  FreeRTOS_STM32G0.cmake  tsumikoro_shared
firmware/common/templates/stm32g071cbu6/: CMakeLists.txt  README.md
firmware/common/templates/stm32g071cbu6/linker/: STM32G071CBU6_FLASH.ld
firmware/nucleo-g071rb/: CMakeLists.txt
firmware/nucleo-g071rb-freertos/: CMakeLists.txt  PINOUT.md  README.md
firmware/nucleo-g071rb-freertos/inc/: FreeRTOSConfig.h  stm32g0xx_hal_conf.h
firmware/nucleo-g071rb-freertos/src/: main.c  stm32g0xx_it.c
firmware/nucleo-g071rb-freertos/startup/: startup_stm32g071rbtx.s
firmware/nucleo-g071rb/inc/: stm32g0xx_hal_conf.h
firmware/nucleo-g071rb/linker/: STM32G071RBT6_FLASH.ld
firmware/nucleo-g071rb/src/: main.c  stm32g0xx_it.c
firmware/shared/: tsumikoro_protocol.h
firmware/shared/tsumikoro_bus/: CMakeLists.txt  IMPLEMENTATION.md  README.md
firmware/shared/tsumikoro_bus/hal/esp32/: tsumikoro_hal_esp32.c  tsumikoro_hal_esp32.h
firmware/shared/tsumikoro_bus/hal/mock/: tsumikoro_hal_mock.c  tsumikoro_hal_mock.h
firmware/shared/tsumikoro_bus/hal/stm32/: tsumikoro_hal_stm32.c  tsumikoro_hal_stm32.h
firmware/shared/tsumikoro_bus/include/: tsumikoro_bus.h  tsumikoro_crc8.h  tsumikoro_hal.h  tsumikoro_protocol.h  tsumikoro_rtos.h
firmware/shared/tsumikoro_bus/src/: tsumikoro_bus.c  tsumikoro_protocol.c  tsumikoro_rtos.c
firmware/shared/tsumikoro_bus/tests/: .gitignore  Makefile  test_bus_handler.c  test_crc8.c  test_framework.h  test_integration.c  test_protocol.c
firmware/shared/tsumikoro_flash_config/: CMakeLists.txt
firmware/shared/tsumikoro_flash_config/include/: tsumikoro_flash_config.h
firmware/shared/tsumikoro_flash_config/src/: tsumikoro_flash_config.c
firmware/shared/tsumikoro_tmc2130/: CMakeLists.txt  README.md
firmware/shared/tsumikoro_tmc2130/include/: tsumikoro_tmc2130.h
firmware/shared/tsumikoro_tmc2130/src/: tsumikoro_tmc2130.c
firmware/shared/tsumikoro_tmc_stepper/: CMakeLists.txt  README.md
firmware/shared/tsumikoro_tmc_stepper/hal/stm32/: tsumikoro_tmc_hal_stm32.c  tsumikoro_tmc_hal_stm32.h
firmware/shared/tsumikoro_tmc_stepper/include/: tsumikoro_tmc_motion.h  tsumikoro_tmc_stepper.h
firmware/shared/tsumikoro_tmc_stepper/src/: tsumikoro_tmc_motion.c  tsumikoro_tmc_stepper.c
firmware/tools/: analyze_code_size.py
firmware/tsumikoro-bridge/: .gitignore  Makefile  README.md  pyproject.toml
firmware/tsumikoro-bridge/components/tsumikoro_bridge/: CMakeLists.txt  __init__.py  tsumikoro_bridge.cpp  tsumikoro_bridge.h  tsumikoro_bus.c  tsumikoro_crc8.c  tsumikoro_hal_esp32.c  tsumikoro_protocol.c  tsumikoro_rtos.c
firmware/tsumikoro-bridge/esphome/: extra_script.py  secrets.yaml.example  tsumikoro-bridge.yaml
firmware/tsumikoro-bridge/tsumikoro_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
firmware/tsumikoro-ministepper/: CMakeLists.txt
firmware/tsumikoro-ministepper/inc/: FreeRTOSConfig.h
firmware/tsumikoro-ministepper/linker/: STM32G071G8U6_FLASH.ld
firmware/tsumikoro-ministepper/src/: main.c  stm32g0xx_it.c
firmware/tsumikoro-servo/: CMakeLists.txt  README.md
firmware/tsumikoro-servo/inc/: limit_switch.h  motor_hbridge.h  servo_pwm.h
firmware/tsumikoro-servo/linker/: STM32G030F6P6_FLASH.ld
firmware/tsumikoro-servo/src/: limit_switch.c  main.c  motor_hbridge.c  servo_pwm.c
hardware/: Makefile  TODO.md  fp-lib-table  sym-lib-table
hardware/bridge/: bridge.kicad_pcb  bridge.kicad_pro  bridge.kicad_sch  fp-lib-table  jlcpcb_bom.csv  psu.kicad_sch
hardware/bridge/docs/: README.md
hardware/bridge/jlcpcb/: README.txt  bridge-BOM.csv  bridge-CPL.csv
hardware/bridge/jlcpcb/gerbers/: bridge-B_Cu.gbl  bridge-B_Mask.gbs  bridge-B_Paste.gbp  bridge-B_Silkscreen.gbo  bridge-Edge_Cuts.gm1  bridge-F_Cu.gtl  bridge-F_Mask.gts  bridge-F_Paste.gtp  bridge-F_Silkscreen.gto  bridge-In1_Cu.g1  bridge-In2_Cu.g2  bridge-drl_map.gbr  bridge-job.gbrjob
hardware/lib/: ATTRIBUTIONS.md
hardware/lib/3dmodels/: STM32_UFQFPN-28_4x4mm_P0.5mm.step  STM32_UFQFPN-32_5x5mm_P0.5mm.step
hardware/lib/footprints.pretty/: ESP32-S3-MINI-1.kicad_mod  SW_Push_1P1T_XKB_TS-1187A.kicad_mod  UFQFPN-28.kicad_mod  UFQFPN-32.kicad_mod
hardware/lib/symbols/: tsumikoro.kicad_sym
hardware/ministepper/: jlcpcb_bom.csv  ministepper.kicad_pcb  ministepper.kicad_pro  ministepper.kicad_sch  psu.kicad_sch  stepper_channel.kicad_sch  sym-lib-table
hardware/ministepper/docs/: README.md
hardware/ministepper/jlcpcb/: README.txt  ministepper-BOM.csv  ministepper-CPL.csv
hardware/ministepper/jlcpcb/gerbers/: ministepper-B_Cu.gbl  ministepper-B_Mask.gbs  ministepper-B_Paste.gbp  ministepper-B_Silkscreen.gbo  ministepper-Edge_Cuts.gm1  ministepper-F_Cu.gtl  ministepper-F_Mask.gts  ministepper-F_Paste.gtp  ministepper-F_Silkscreen.gto  ministepper-In1_Cu.g1  ministepper-In2_Cu.g2  ministepper-drl_map.gbr  ministepper-job.gbrjob  ministepper.drl
hardware/scripts/: jlcpcb-package.sh
hardware/servo/: bom_tps54061_psu.csv  jlcpcb_bom.csv  psu.kicad_sch  psu_servo.kicad_sch  servo.kicad_pcb  servo.kicad_prl  servo.kicad_pro  servo.kicad_sch  ~servo.kicad_pro.lck
hardware/servo/docs/: README.md
hardware/servo/jlcpcb/: README.txt  servo-BOM.csv  servo-CPL.csv
hardware/servo/jlcpcb/gerbers/: servo-B_Cu.gbl  servo-B_Mask.gbs  servo-B_Paste.gbp  servo-B_Silkscreen.gbo  servo-Edge_Cuts.gm1  servo-F_Cu.gtl  servo-F_Mask.gts  servo-F_Paste.gtp  servo-F_Silkscreen.gto  servo-In1_Cu.g1  servo-In2_Cu.g2  servo-drl_map.gbr  servo-job.gbrjob  servo.drl
